# OMERO-Automated-Data-Import

./: .devnotes.md  .gitignore  Dock_dev.sh  Dockerfile  README.md  conda-make-env.sh  env  make_test_env.sh  podman_dev.sh  pyproject.toml  requirements.txt  runme.sh  security_overview_privileged.md  setup.py  storage.conf  test_imports.py
.github/workflows/: docker-image.yml
ABU_SYS_III.egg-info/: PKG-INFO  SOURCES.txt
Containerizing/: Dockerfile  Dockerfile.draft
config/: directory_structure.json  directory_structure.json.back  groups_list.json  sample_upload_order.txt  settings.json  settings.yml  test_settings.yml  upload_order.template.txt
db/: ingestion_tracking.db
logs/: app.logs
omero_adi/: __init__.py  db_migrate.py  main.py
omero_adi/migrations/: alembic.ini  env.py
omero_adi/migrations/versions/: 78d3d6d84aec_add_description_to_imports.py
omero_adi/utils/: __init__.py  importer.py  ingest_tracker.py  initialize.py  register.py  upload_order_manager.py
scripts/: BetterWells.py
set_up/: get_omero_info.py
src/: import_test_logging.py  main.py
src/test/: test.py
src/utils/: __init__.py  config_manager.py  data_mover.py  failure_handler.py  import.py  importer.py  ingest_tracker.py  initialize.py  logger.py  move_dataset.py  order_management.py  stager.py  upload_order_manager.py
test/: test.py
tests/: Barbie1.tif  README.md  requirements.txt  setup_conda_test_env.sh  system_check.py  t_main.bak  t_main.py  t_settings.bak  test_system.py
tests/settings/: t_settings.py
tests/unittests/: pyetest.ini  test_ingest_tracker.py  test_main.py  test_upload_order_manager.py
tests/unittests/test_config/: sample_groups_list copy.json  sample_groups_list.json  sample_upload_order.txt  settings.yml
